force-app/main/default/objects/ppmail__Mail_Event__c/ppmail__Mail_Event__c.object-meta.xml
<CustomObject>
    <description>Stores information about email events, such as opens, clicks, bounces, and unsubscribes. It is used to track the engagement of recipients with emails sent through the system.</description>
    <label>Mail Event</label>
    <nameField>
        <displayFormat>MEVT-{000000000}</displayFormat>
        <label>Mail Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mail Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>