force-app/main/default/objects/ppmail__Mail_Event__c/fields/ppmail__Categories__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Categories__c</fullName>
    <description>A comma-separated list of categories associated with the email that generated this event. Categories can be used for tracking and reporting purposes.</description>
    <label>Categories</label>
    <type>TextArea</type>
</CustomField>