force-app/main/default/objects/ppmail__Mail_Event__c/fields/ppmail__Email__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Email__c</fullName>
    <description>The email address of the recipient who triggered the event.</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>