force-app/main/default/objects/ppmail__Mail_Event__c/fields/ppmail__Event_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Event_Date_Time__c</fullName>
    <description>A formula field that converts the Unix timestamp from the Timestamp__c field into a standard Date/Time format. This provides a human-readable timestamp for when the event occurred.</description>
    <formula>IF(ppmail__Timestamp__c &lt;&gt; 0, FROMUNIXTIME(ppmail__Timestamp__c), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Date/Time</label>
    <type>DateTime</type>
</CustomField>