force-app/main/default/objects/ppmail__Mail_Event__c/fields/ppmail__External_ID__c.field-meta.xml
<CustomField>
    <fullName>ppmail__External_ID__c</fullName>
    <description>The unique identifier for this event from the external mail service provider. This is used to prevent duplicate event records.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>