force-app/main/default/objects/ppmail__Mail_Event__c/fields/ppmail__Mail_Sending_Batch__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Mail_Sending_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mail Sending Batch</label>
    <referenceTo>ppmail__Mail_Sending_Batch__c</referenceTo>
    <relationshipLabel>Mail Events</relationshipLabel>
    <relationshipName>Mail_Events</relationshipName>
    <type>Lookup</type>
</CustomField>