force-app/main/default/objects/ppmail__Mail_Event__c/fields/ppmail__Mail_Tracking__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Mail_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the Mail Tracking record associated with this event. This links the event to a specific email sent to a specific recipient.</description>
    <label>Mail Tracking</label>
    <referenceTo>ppmail__Mail_Tracking__c</referenceTo>
    <relationshipLabel>Mail Events</relationshipLabel>
    <relationshipName>Mail_Events</relationshipName>
    <type>Lookup</type>
</CustomField>