force-app/main/default/objects/ppmail__Mail_Event__c/fields/ppmail__Payload__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Payload__c</fullName>
    <description>The full JSON payload received from the mail service provider for this event. This can be useful for debugging and detailed analysis.</description>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>