force-app/main/default/objects/ppmail__Mail_Event__c/fields/ppmail__Reason__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Reason__c</fullName>
    <description>The reason for the event, such as the reason for a bounce.</description>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>