force-app/main/default/objects/ppmail__Mail_Event__c/fields/ppmail__Source__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Source__c</fullName>
    <description>The source of the mail event, indicating which mail service provider (e.g., SendGrid, Mailgun) generated the event.</description>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ppmail__Mail_Service</valueSetName>
    </valueSet>
</CustomField>