force-app/main/default/objects/ppmail__Mail_Event__c/fields/ppmail__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Timestamp__c</fullName>
    <description>The Unix timestamp of when the event occurred.</description>
    <label>Timestamp</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>