force-app/main/default/objects/ppmail__Mail_Event__c/fields/ppmail__Type__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Type__c</fullName>
    <description>The type of the mail event, such as &apos;open&apos;, &apos;click&apos;, &apos;bounce&apos;, or &apos;unsubscribe&apos;.</description>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>